# poetry-ci-updater

./: .gitignore  README.md  pyproject.toml
poetry_ci_updater/: main.py
poetry_ci_updater/providers/: gitlab.py  provider.py
