[tool.poetry]
name = "poetry-ci-updater"
version = "0.1.3"
description = ""
authors = ["MarcoGlauser"]

[tool.poetry.dependencies]
python = "^3.6"
gitpython = "^3.1.2"
requests = "^2.23.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
poetry-dependency-updater = 'poetry_ci_updater.main:main'